# AgentClients

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cpp/: .clang-tidy  CMakeLists.txt  FIRAMessage  README.md
cpp/cmake/: FindWS2_32.cmake  FindgRPC.cmake
cpp/include/: config.h.in  convert.h  cpp_strategy.h  platform.h  strategy_server.h
cpp/src/: convert.cpp  cpp_strategy.cpp  main.cpp  strategy_server.cpp
handyController/: README.md  RefServer.py  handyWidget.py  handyWidget.ui  protoCompiler.bash  requirements.txt
python/: README.md  protoCompiler.bash  requirements.txt
python/protoCompiled/: common_pb2.py
python/protoCompiled/REF2CLI/: messages_pb2.py  service_pb2.py  service_pb2_grpc.py
python/src/: geom.py  playon.py  refServer.py  soccer.py  utilities.py
